Modifico ruta de imagen en vista contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
         <div class="main-header">
             <a href="../inicio.html"><img class="logo" src="../img/Ecobici_Buenos_Aires_pictogram.svg.png"
                     alt="logo-bicicleta"></a>
-            <img class="logo-2" src="/img/BACiudad_logo-2.png" alt="logo-BA-ciudad">
+            <img class="logo-2" src="../img/BACiudad_logo-2.png" alt="logo-BA-ciudad">
 
         </div>
 
