--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -36,29 +36,115 @@
     </header>
     <main>
 
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt officiis ipsum a laborum quas similique!
-            Eos
-            ducimus minus repudiandae nobis mollitia, debitis animi. Modi hic nihil ipsa officiis asperiores cumque?
-        </p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt officiis ipsum a laborum quas similique!
-            Eos
-            ducimus minus repudiandae nobis mollitia, debitis animi. Modi hic nihil ipsa officiis asperiores cumque?
-        </p>
+        <h1 class="titular">Somos los creadores del proyecto</h1>
 
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt officiis ipsum a laborum quas similique!
-            Eos
-            ducimus minus repudiandae nobis mollitia, debitis animi. Modi hic nihil ipsa officiis asperiores cumque?
-        </p>
+        <div class="contenedor-alumno">
 
-        <p>>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt officiis ipsum a laborum quas similique!
-            Eos
-            ducimus minus repudiandae nobis mollitia, debitis animi. Modi hic nihil ipsa officiis asperiores cumque?
-        </p>
+            <div class="alumnos">
 
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt officiis ipsum a laborum quas similique!
-            Eos
-            ducimus minus repudiandae nobis mollitia, debitis animi. Modi hic nihil ipsa officiis asperiores cumque?
-        </p>
+                <img class="img-perfil" src="../img/foto-perfil-ariel.jpeg" alt="Imagen  alumno Ariel Cesari">
+
+
+                <div class="contenedor-info-perfil">
+                    <h3 class="titular">Ariel Cesari</h3>
+                    <div class="contenedor-button">
+                        <button class="button-linkedin"><a
+                                href="https://www.linkedin.com/in/ariel-cesari/">Linkedin</a></button>
+                    </div>
+                    <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
+                        suscipit fugiat consequatur
+                    </p>
+
+
+                </div>
+
+            </div>
+
+            <div class="alumnos">
+
+                <img class="img-perfil" src="../img/img-user.jpg" alt="Imagen alumna Micaela Ocanto">
+
+                <div class="contenedor-info-perfil">
+                    <h3 class="titular">Micaela Ocanto</h3>
+                    <div class="contenedor-button">
+                        <button class="button-linkedin"><a href="#">Linkedin</a></button>
+                    </div>
+
+                    <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
+                        suscipit fugiat consequatur
+                    </p>
+
+
+
+
+
+
+                </div>
+
+            </div>
+
+            <div class="alumnos">
+
+                <img class="img-perfil" src="../img/img-user.jpg" alt="Imagen alumna Licht Alzamora">
+
+                <div class="contenedor-info-perfil">
+                    <h3 class="titular">Licht Alzamora</h3>
+                    <div class="contenedor-button">
+                        <button class="button-linkedin"><a href="#">Linkedin</a></button>
+                    </div>
+                    <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
+                        suscipit fugiat consequatur
+                    </p>
+
+
+
+                </div>
+
+            </div>
+
+            <div class="alumnos">
+
+                <img class="img-perfil" src="../img/img-user.jpg" alt="Imagen  alumna Sofia Galloso">
+
+                <div class="contenedor-info-perfil">
+                    <h3 class="titular">Sofia Galloso</h3>
+                    <div class="contenedor-button">
+                        <button class="button-linkedin"><a href="#">Linkedin</a></button>
+                    </div>
+                    <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
+                        suscipit fugiat consequatur
+                    </p>
+
+
+
+                </div>
+
+            </div>
+
+            <div class="alumnos">
+
+                <img class="img-perfil" src="../img/img-user.jpg" alt="Imagen alumno Francisco Lopez Villanueva">
+
+                <div class="contenedor-info-perfil">
+                    <h3 class="titular">Francisco Lopez Villanueva</h3>
+                    <div class="contenedor-button">
+                        <button class="button-linkedin"><a href="#">Linkedin</a></button>
+                    </div>
+                    <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
+                        suscipit fugiat consequatur
+                    </p>
+
+
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+
+
 
 
 
