--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -49,7 +49,7 @@
                     <h3 class="titular">Ariel Cesari</h3>
                     <div class="contenedor-button">
                         <button class="button-linkedin"><a
-                                href="https://www.linkedin.com/in/ariel-cesari/">Linkedin</a></button>
+                                href="https://www.linkedin.com/in/ariel-cesari/" target="_blank" >Linkedin</a></button>
                     </div>
                     <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
                         suscipit fugiat consequatur
@@ -67,7 +67,7 @@
                 <div class="contenedor-info-perfil">
                     <h3 class="titular">Micaela Ocanto</h3>
                     <div class="contenedor-button">
-                        <button class="button-linkedin"><a href="#">Linkedin</a></button>
+                        <button class="button-linkedin"><a href="#" target="_blank">Linkedin</a></button>
                     </div>
 
                     <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
@@ -90,7 +90,7 @@
                 <div class="contenedor-info-perfil">
                     <h3 class="titular">Licht Alzamora</h3>
                     <div class="contenedor-button">
-                        <button class="button-linkedin"><a href="#">Linkedin</a></button>
+                        <button class="button-linkedin"><a href="#" target="_blank">Linkedin</a></button>
                     </div>
                     <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
                         suscipit fugiat consequatur
@@ -109,7 +109,7 @@
                 <div class="contenedor-info-perfil">
                     <h3 class="titular">Sofia Galloso</h3>
                     <div class="contenedor-button">
-                        <button class="button-linkedin"><a href="#">Linkedin</a></button>
+                        <button class="button-linkedin"><a href="#" target="_blank">Linkedin</a></button>
                     </div>
                     <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
                         suscipit fugiat consequatur
@@ -128,7 +128,7 @@
                 <div class="contenedor-info-perfil">
                     <h3 class="titular">Francisco Lopez Villanueva</h3>
                     <div class="contenedor-button">
-                        <button class="button-linkedin"><a href="#">Linkedin</a></button>
+                        <button class="button-linkedin"><a href="#" target="_blank">Linkedin</a></button>
                     </div>
                     <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
                         suscipit fugiat consequatur
