--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,7 +27,7 @@
                 <li><i class="fa-solid fa-bicycle"></i></li>
                 <li><a href="../inicio.html">Inicio</a></li>
                 <li><a href="./nosotros.html">Nosotros</a></li>
-                <li> <a href="./contacto.html">Contacto</a></li>
+                <li> <a href="./Formulario/index.html">Contacto</a></li>
                 <li><i class="fa-solid fa-bicycle"></i></li>
             </ul>
         </nav>
