--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -85,12 +85,13 @@
 
             <div class="alumnos">
 
-                <img class="img-perfil" src="../img/img-user.jpg" alt="Imagen alumna Licht Alzamora">
+                <img class="img-perfil" src="../img/IMG_Licht_Alzamora.JPG.jpg" alt="Imagen alumna Licht Alzamora">
 
                 <div class="contenedor-info-perfil">
                     <h3 class="titular">Licht Alzamora</h3>
                     <div class="contenedor-button">
-                        <button class="button-linkedin"><a href="#" target="_blank">Linkedin</a></button>
+                        <button class="button-linkedin">
+                            <a href="https://www.linkedin.com/in/licht-alzamora-72b119226?trk=contact-info" target="_blank">Linkedin</a></button>
                     </div>
                     <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
                         suscipit fugiat consequatur
