--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -141,6 +141,25 @@
 
             </div>
 
+            <div class="alumnos">
+
+                <img class="img-perfil" src="../img/img-user.jpg" alt="Imagen alumno Paola Guerra">
+
+                <div class="contenedor-info-perfil">
+                    <h3 class="titular">Paola Guerra</h3>
+                    <div class="contenedor-button">
+                        <button class="button-linkedin"><a href="#" target="_blank">Linkedin</a></button>
+                    </div>
+                    <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
+                        suscipit fugiat consequatur
+                    </p>
+
+
+
+                </div>
+
+            </div>
+
         </div>
 
 
