Hago responsive imagen en vista nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -85,7 +85,7 @@
 
             <div class="alumnos">
 
-                <img class="img-perfil" src="../img/IMG_Licht_Alzamora.JPG.jpg" alt="Imagen alumna Licht Alzamora">
+                <img class="img-perfil-licht" src="../img/IMG_Licht_Alzamora.JPG.jpg" alt="Imagen alumna Licht Alzamora">
 
                 <div class="contenedor-info-perfil">
                     <h3 class="titular">Licht Alzamora</h3>
