--- a/inicio.html
+++ b/inicio.html
@@ -75,6 +75,7 @@
             <li><a href="./pages/contacto.html">Contacto</a></li>
             <li><i class="fa-solid fa-bicycle"></i></li>
         </ul>
+        <p class="copy">Diseñado por Grupo #9 - &copy;2023</p>
 
 
 
