--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -182,6 +182,8 @@
             <li><a href="./contacto.html">Contacto</a></li>
             <li><i class="fa-solid fa-bicycle"></i></li>
         </ul>
+        <p class="copy">Diseñado por Grupo #9 - &copy;2023</p>
+
 
 
 
