--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -107,6 +107,8 @@
             <li><a href="./Formulario/index.html">Contacto</a></li>
             <li><i class="fa-solid fa-bicycle"></i></li>
         </ul>
+        <p class="copy">Diseñado por Grupo #9 - &copy;2023</p>
+
 
 
 
