--- a/inicio.html
+++ b/inicio.html
@@ -27,7 +27,9 @@
                 <li><a href="./inicio.html">Inicio</a></li>
                 <li><a href="./pages/nosotros.html">Nosotros</a></li>
                 <li> <a href="./pages/contacto.html">Contacto</a></li>
+                <li><a href="./pages/busqueda/indiex.html">Buscar🚲</a></li>
                 <li><i class="fa-solid fa-bicycle"></i></li>
+                
             </ul>
         </nav>
 
