agregando parrafo-licht

--- a/inicio.html
+++ b/inicio.html
@@ -44,25 +44,13 @@
 
         <div class="contenedor-info">
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam tempora illum possimus, enim molestiae
-                doloribus
-                corrupti unde quaerat maxime veniam eligendi eum dolores perspiciatis aliquid ducimus quis maiores! Est,
-                ratione!</p>
+            <p>¡Hola! ¡Bienvenidos a la maravillosa ciudad de Buenos Aires! Si quieres vivir una experiencia única y amigable con el medio ambiente mientras exploras todos los rincones de esta vibrante metrópolis, te recordaremos a unirte al emocionante mundo de Ecobici.</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam tempora illum possimus, enim molestiae
-                doloribus
-                corrupti unde quaerat maxime veniam eligendi eum dolores perspiciatis aliquid ducimus quis maiores! Est,
-                ratione!</p>
+            <p>Con su amplia red de estaciones distribuidas estratégicamente por toda la ciudad, Ecobici te ofrece la oportunidad de recorrer nuestras calles históricas, parques exuberantes y barrios modernos de una manera sostenible y saludable. </p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam tempora illum possimus, enim molestiae
-                doloribus
-                corrupti unde quaerat maxime veniam eligendi eum dolores perspiciatis aliquid ducimus quis maiores! Est,
-                ratione!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam tempora illum possimus, enim molestiae
-                doloribus
-                corrupti unde quaerat maxime veniam eligendi eum dolores perspiciatis aliquid ducimus quis maiores! Est,
-                ratione!</p>
-
+            <p>Olvídate del tráfico y disfruta de un paseo en bicicleta sin preocupaciones, contribuyendo activamente a la reducción de emisiones contaminantes y el cuidado de nuestro entorno. </p>
+            <p>¡Únete a la comunidad de ciclistas comprometidos con el cambio y descubre Buenos Aires desde una perspectiva eco-friendly! ¡Te aseguramos que cada pedaleo será una experiencia inolvidable llena de descubrimientos y emociones! ¡Anímate a usar Ecobici ya ser parte del movimiento hacia una ciudad más limpia, verde y amigable con todos!</p>
+            <p>¡Descubre una forma sostenible y emocionante de moverte por Buenos Aires! Te recomendamos experimentar la ciudad de una manera única y amigable con el medio ambiente a través de EcoBici. Con nuestra red de bicicletas compartidas, podrás recorrer los encantadores barrios porteños, disfrutar de la brisa fresca mientras pedaleas y admirar los icónicos monumentos y parques. Olvídate del tráfico y los problemas de estacionamiento, ¡con EcoBici es fácil y conveniente llegar a cualquier destino! una experiencia inolvidable en la vibrante ciudad de Buenos Aires. ¡Las calles te esperan, súbete a una EcoBici y comienza a pedalear hacia un futuro más verde y saludable!"</p>
         </div>
 
     </main>
