--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -93,8 +93,7 @@
                         <button class="button-linkedin">
                             <a href="https://www.linkedin.com/in/licht-alzamora-72b119226?trk=contact-info" target="_blank">Linkedin</a></button>
                     </div>
-                    <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
-                        suscipit fugiat consequatur
+                    <p class="texto-perfil">Desarrollo Web Full Stack
                     </p>
 
 
