Validaciones en formulario con JavaScript

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -39,6 +39,10 @@
         <main>
 
             <h2 class="titular-h2">Recibí nuestras novedades</h2>
+
+            <ul id="errores">
+
+            </ul>
             <form id="form">
 
 
@@ -60,8 +64,10 @@
 
                 
                 <label>
-                    <input type="checkbox" name="suscripcion" value="si"> Suscribirme al boletín de noticias
+                    <input type="checkbox" name="suscripcion" value="si" > Suscribirme al boletín de noticias
                 </label>
+
+                
                 <button type="submit">Enviar</button>
 
             </form>
@@ -90,7 +96,7 @@
 
     </footer>
   
-
+    <script src="../scripts/validacionesFormulario.js"></script>
 </body>
 
 </html>
