--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -48,11 +48,11 @@
                 <div class="contenedor-info-perfil">
                     <h3 class="titular">Ariel Cesari</h3>
                     <div class="contenedor-button">
-                        <button class="button-linkedin"><a
-                                href="https://www.linkedin.com/in/ariel-cesari/" target="_blank" >Linkedin</a></button>
+                        <button class="button-linkedin"><a href="https://www.linkedin.com/in/ariel-cesari/"
+                                target="_blank">Linkedin</a></button>
                     </div>
-                    <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
-                        suscipit fugiat consequatur
+                    <p class="texto-perfil">¡Hola! Tengo 31 años. Me interesa capacitarme en Desarrollo Web Full Stack y
+                        Testing QA. Soy curioso, metódico, comprometido. Busco superarme y afrontar nuevos desafíos.
                     </p>
 
 
@@ -85,13 +85,15 @@
 
             <div class="alumnos">
 
-                <img class="img-perfil-licht" src="../img/IMG_Licht_Alzamora.JPG.jpg" alt="Imagen alumna Licht Alzamora">
+                <img class="img-perfil-licht" src="../img/IMG_Licht_Alzamora.JPG.jpg"
+                    alt="Imagen alumna Licht Alzamora">
 
                 <div class="contenedor-info-perfil">
                     <h3 class="titular">Licht Alzamora</h3>
                     <div class="contenedor-button">
                         <button class="button-linkedin">
-                            <a href="https://www.linkedin.com/in/licht-alzamora-72b119226?trk=contact-info" target="_blank">Linkedin</a></button>
+                            <a href="https://www.linkedin.com/in/licht-alzamora-72b119226?trk=contact-info"
+                                target="_blank">Linkedin</a></button>
                     </div>
                     <p class="texto-perfil">Desarrollo Web Full Stack
                     </p>
