--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -95,7 +95,7 @@
                             <a href="https://www.linkedin.com/in/licht-alzamora-72b119226?trk=contact-info"
                                 target="_blank">Linkedin</a></button>
                     </div>
-                    <p class="texto-perfil">Desarrollo Web Full Stack
+                    <p class="texto-perfil">Desarrollo Web - Full Stack - Soy una apasionada del desarrolladora web y siempre estoy ansiosa por enfrentar nuevos desafíos y aprender cosas nuevas. 
                     </p>
 
 
