Funcion Buscar mapa estaciones

--- a/pages/busqueda/indiex.html
+++ b/pages/busqueda/indiex.html
@@ -15,16 +15,47 @@
         <input type="text" name="buscador" id="buscador" placeholder="Buscar...">
 
         <ul id="listaArticulos">
-            <li class="articulo">Palermo</li>
-            <li class="articulo">Recoleta</li>
+            <li class="articulo">Agronomia</li>
+            <li class="articulo">Almagro</li>
+            <li class="articulo">Balvanera</li>
+            <li class="articulo">Barracas</li>
             <li class="articulo">Belgrano</li>
-            <li class="articulo">9 de Julio</li>
-            <li class="articulo">Puerto Madero</li>
+            <li class="articulo">Boedo</li>
             <li class="articulo">Caballito</li>
-            <li class="articulo">Monserrat</li>
+            <li class="articulo">Chacarita</li>
+            <li class="articulo">Coghlan</li>
+            <li class="articulo">Colegiales</li>
+            <li class="articulo">Constitución</li>
+            <li class="articulo">Flores</li>
+            <li class="articulo">Floresta</li>
             <li class="articulo">La Boca</li>
+            <li class="articulo">La Paternal</li>
+            <li class="articulo">Liniers</li>
+            <li class="articulo">Mataderos</li>
+            <li class="articulo">Monte Castro</li>
+            <li class="articulo">Monserrat</li>
+            <li class="articulo">Nueva Pompeya</li>
+            <li class="articulo">Núñez</li>
+            <li class="articulo">Palermo</li>
+            <li class="articulo">Parque Avellaneda</li>
+            <li class="articulo">Parque Chacabuco</li>
+            <li class="articulo">Parque Chas</li>
+            <li class="articulo">Parque Patricios</li>
+            <li class="articulo">Recoleta</li>
+            <li class="articulo">Retiro</li>
+            <li class="articulo">Saavedra</li>
+            <li class="articulo">San Cristóbal</li>
+            <li class="articulo">San Nicolás</li>
+            <li class="articulo">San Telmo</li>
+            <li class="articulo">Villa Crespo</li>
+            <li class="articulo">Villa del Parque</li>
+            <li class="articulo">Villa Devoto</li>
+            <li class="articulo">Villa Urquiza</li>
         </ul>
 
+    </div>
+
+    <div id="infoArticulo">
     </div>
 
 
