--- a/inicio.html
+++ b/inicio.html
@@ -14,9 +14,9 @@
 <body>
     <header>
         <div class="main-header">
-            <a href="./inicio.html"><img class="logo" src="./img/Ecobici_Buenos_Aires_pictogram.svg.png"
+            <a href="./inicio.html"><img class="logo" src="./img/logo1.png"
                     alt="logo-bicicleta"></a>
-            <img class="logo-2" src="./img/BACiudad_logo-2.png" alt="logo-BA-ciudad">
+            <img class="logo-2" src="/img/logo2.png" alt="logo-BA-ciudad">
 
         </div>
 
