Agrego header en vistas restantes

--- a/inicio.html
+++ b/inicio.html
@@ -14,8 +14,7 @@
 <body>
     <header>
         <div class="main-header">
-            <a href="./inicio.html"><img class="logo" src="./img/logo1.png"
-                    alt="logo-bicicleta"></a>
+            <a href="./inicio.html"><img class="logo" src="./img/logo1.png" alt="logo-bicicleta"></a>
             <img class="logo-2" src="/img/logo2.png" alt="logo-BA-ciudad">
 
         </div>
@@ -29,7 +28,7 @@
                 <li> <a href="./pages/contacto.html">Contacto</a></li>
                 <li><a href="./pages/busqueda/indiex.html">Buscar🚲</a></li>
                 <li><i class="fa-solid fa-bicycle"></i></li>
-                
+
             </ul>
         </nav>
 
@@ -44,15 +43,28 @@
 
         <div class="contenedor-info">
 
-            <p> ✔ ¡Hola! ¡Bienvenidos a la maravillosa ciudad de Buenos Aires! Si quieres vivir una experiencia única y amigable con el medio ambiente mientras exploras todos los rincones de esta vibrante metrópolis, te recordaremos a unirte al emocionante mundo de Ecobici.</p>
+            <p> ✔ ¡Hola! ¡Bienvenidos a la maravillosa ciudad de Buenos Aires! Si quieres vivir una experiencia única y
+                amigable con el medio ambiente mientras exploras todos los rincones de esta vibrante metrópolis, te
+                recordaremos a unirte al emocionante mundo de Ecobici.</p>
 
-            <p>  ✔ Con su amplia red de estaciones distribuidas estratégicamente por toda la ciudad, Ecobici te ofrece la oportunidad de recorrer nuestras calles históricas, parques exuberantes y barrios modernos de una manera sostenible y saludable. </p>
+            <p> ✔ Con su amplia red de estaciones distribuidas estratégicamente por toda la ciudad, Ecobici te ofrece la
+                oportunidad de recorrer nuestras calles históricas, parques exuberantes y barrios modernos de una manera
+                sostenible y saludable. </p>
 
-            <p> ✔  Olvídate del tráfico y disfruta de un paseo en bicicleta sin preocupaciones, contribuyendo activamente a la reducción de emisiones contaminantes y el cuidado de nuestro entorno. </p>
-            <p> ✔  ¡Únete a la comunidad de ciclistas comprometidos con el cambio y descubre Buenos Aires desde una perspectiva eco-friendly! ¡Te aseguramos que cada pedaleo será una experiencia inolvidable llena de descubrimientos y emociones! ¡Anímate a usar Ecobici ya ser parte del movimiento hacia una ciudad más limpia, verde y amigable con todos!</p>
-            <p> ✔  ¡Descubre una forma sostenible y emocionante de moverte por Buenos Aires!  
-                Te recomendamos experimentar la ciudad de una manera única y amigable con el medio ambiente a través de EcoBici. Con nuestra red de bicicletas compartidas, podrás recorrer los encantadores barrios porteños, disfrutar de la brisa fresca mientras pedaleas y admirar los icónicos monumentos y parques. Olvídate del tráfico y los problemas de estacionamiento, ¡con EcoBici es fácil y conveniente llegar a cualquier destino! una experiencia inolvidable en la vibrante ciudad de Buenos Aires. 
-                 ¡Las calles te esperan, súbete a una EcoBici y comienza a pedalear hacia un futuro más verde y saludable!"</p>
+            <p> ✔ Olvídate del tráfico y disfruta de un paseo en bicicleta sin preocupaciones, contribuyendo activamente
+                a la reducción de emisiones contaminantes y el cuidado de nuestro entorno. </p>
+            <p> ✔ ¡Únete a la comunidad de ciclistas comprometidos con el cambio y descubre Buenos Aires desde una
+                perspectiva eco-friendly! ¡Te aseguramos que cada pedaleo será una experiencia inolvidable llena de
+                descubrimientos y emociones! ¡Anímate a usar Ecobici ya ser parte del movimiento hacia una ciudad más
+                limpia, verde y amigable con todos!</p>
+            <p> ✔ ¡Descubre una forma sostenible y emocionante de moverte por Buenos Aires!
+                Te recomendamos experimentar la ciudad de una manera única y amigable con el medio ambiente a través de
+                EcoBici. Con nuestra red de bicicletas compartidas, podrás recorrer los encantadores barrios porteños,
+                disfrutar de la brisa fresca mientras pedaleas y admirar los icónicos monumentos y parques. Olvídate del
+                tráfico y los problemas de estacionamiento, ¡con EcoBici es fácil y conveniente llegar a cualquier
+                destino! una experiencia inolvidable en la vibrante ciudad de Buenos Aires.
+                ¡Las calles te esperan, súbete a una EcoBici y comienza a pedalear hacia un futuro más verde y
+                saludable!"</p>
         </div>
 
     </main>
