--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,9 +15,8 @@
 
     <header>
         <div class="main-header">
-            <a href="../inicio.html"><img class="logo" src="../img/Ecobici_Buenos_Aires_pictogram.svg.png"
-                    alt="logo-bicicleta"></a>
-            <img class="logo-2" src="../img/BACiudad_logo-2.png" alt="logo-BA-ciudad">
+            <a href="../inicio.html"><img class="logo" src="../img/logo1.png" alt="logo-bicicleta"></a>
+            <img class="logo-2" src="../img/logo2.png" alt="logo-BA-ciudad">
 
         </div>
 
@@ -62,12 +61,12 @@
                 <label for="Mensaje">Mensaje:</label>
                 <textarea id="Mensaje" name="mensaje" placeholder=" Mínimo 100 carácteres"></textarea>
 
-                
+
                 <label>
-                    <input type="checkbox" name="suscripcion" value="si" > Suscribirme al boletín de noticias
+                    <input type="checkbox" name="suscripcion" value="si"> Suscribirme al boletín de noticias
                 </label>
 
-                
+
                 <button type="submit">Enviar</button>
 
             </form>
@@ -95,7 +94,7 @@
 
 
     </footer>
-  
+
     <script src="../scripts/validacionesFormulario.js"></script>
 </body>
 
