--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -15,9 +15,8 @@
 
     <header>
         <div class="main-header">
-            <a href="../inicio.html"><img class="logo" src="../img/Ecobici_Buenos_Aires_pictogram.svg.png"
-                    alt="logo-bicicleta"></a>
-            <img class="logo-2" src="../img/BACiudad_logo-2.png" alt="logo-BA-ciudad">
+            <a href="../inicio.html"><img class="logo" src="../img/logo1.png" alt="logo-bicicleta"></a>
+            <img class="logo-2" src="../img/logo2.png" alt="logo-BA-ciudad">
 
         </div>
 
@@ -95,7 +94,8 @@
                             <a href="https://www.linkedin.com/in/licht-alzamora-72b119226?trk=contact-info"
                                 target="_blank">Linkedin</a></button>
                     </div>
-                    <p class="texto-perfil">Desarrollo Web - Full Stack - Soy una apasionada del desarrolladora web y siempre estoy ansiosa por enfrentar nuevos desafíos y aprender cosas nuevas. 
+                    <p class="texto-perfil">Desarrollo Web - Full Stack - Soy una apasionada del desarrolladora web y
+                        siempre estoy ansiosa por enfrentar nuevos desafíos y aprender cosas nuevas.
                     </p>
 
 
