Agrego menu hamburguesa en vista movil

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,8 +20,12 @@
 
         </div>
 
+        <a href="#" class="burger-menu" id="burgerMenu">
+            <i class="fas fa-bars"></i>
+        </a>
+        
 
-        <nav class="nav-bar">
+        <nav class="nav-bar" id="navBar">
             <ul>
                 <li><i class="fa-solid fa-bicycle"></i></li>
                 <li><a href="../inicio.html">Inicio</a></li>
@@ -96,6 +100,7 @@
     </footer>
 
     <script src="../scripts/validacionesFormulario.js"></script>
+    <script src="../scripts/burgerMenu.js"></script>
 </body>
 
 </html>
