--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -20,8 +20,12 @@
 
         </div>
 
+        <a href="#" class="burger-menu" id="burgerMenu">
+            <i class="fas fa-bars"></i>
+        </a>
 
-        <nav class="nav-bar">
+
+        <nav class="nav-bar" id="navBar">
             <ul>
                 <li><i class="fa-solid fa-bicycle"></i></li>
                 <li><a href="../inicio.html">Inicio</a></li>
@@ -104,43 +108,7 @@
 
             </div>
 
-            <div class="alumnos">
 
-                <img class="img-perfil" src="../img/img-user.jpg" alt="Imagen  alumna Sofia Galloso">
-
-                <div class="contenedor-info-perfil">
-                    <h3 class="titular">Sofia Galloso</h3>
-                    <div class="contenedor-button">
-                        <button class="button-linkedin"><a href="#" target="_blank">Linkedin</a></button>
-                    </div>
-                    <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
-                        suscipit fugiat consequatur
-                    </p>
-
-
-
-                </div>
-
-            </div>
-
-            <div class="alumnos">
-
-                <img class="img-perfil" src="../img/img-user.jpg" alt="Imagen alumno Francisco Lopez Villanueva">
-
-                <div class="contenedor-info-perfil">
-                    <h3 class="titular">Francisco Lopez Villanueva</h3>
-                    <div class="contenedor-button">
-                        <button class="button-linkedin"><a href="#" target="_blank">Linkedin</a></button>
-                    </div>
-                    <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
-                        suscipit fugiat consequatur
-                    </p>
-
-
-
-                </div>
-
-            </div>
 
             <div class="alumnos">
 
@@ -193,7 +161,7 @@
 
     </footer>
 
-
+    <script src="../scripts/burgerMenu.js"></script>
 </body>
 
 </html>
