agregado de graficos

--- a/inicio.html
+++ b/inicio.html
@@ -34,7 +34,7 @@
                 <li><a href="./inicio.html">Inicio</a></li>
                 <li><a href="./pages/nosotros.html">Nosotros</a></li>
                 <li> <a href="./pages/contacto.html">Contacto</a></li>
-                <li><a href="./pages/busqueda/indiex.html">Buscar🚲</a></li>
+                <li><a href="./pages/busqueda/indiex.html">Buscar estaciones🚲</a></li>
                 <li><i class="fa-solid fa-bicycle"></i></li>
 
             </ul>
@@ -66,6 +66,8 @@
                 perspectiva eco-friendly! ¡Te aseguramos que cada pedaleo será una experiencia inolvidable llena de
                 descubrimientos y emociones! ¡Anímate a usar Ecobici ya ser parte del movimiento hacia una ciudad más
                 limpia, verde y amigable con todos!</p>
+                <p> Dia a dia, año tras año mas personas elijen como medio de transporte.</p>
+                <img class="grafico_año" src="./Graficos/image 2.PNG" alt="imagen_año">
             <p> ✔ ¡Descubre una forma sostenible y emocionante de moverte por Buenos Aires!
                 Te recomendamos experimentar la ciudad de una manera única y amigable con el medio ambiente a través de
                 EcoBici. Con nuestra red de bicicletas compartidas, podrás recorrer los encantadores barrios porteños,
