corrijo ruta de logo

--- a/inicio.html
+++ b/inicio.html
@@ -15,7 +15,7 @@
     <header>
         <div class="main-header">
             <a href="./inicio.html"><img class="logo" src="./img/logo1.png" alt="logo-bicicleta"></a>
-            <img class="logo-2" src="/img/logo2.png" alt="logo-BA-ciudad">
+            <img class="logo-2" src="./img/logo2.png" alt="logo-BA-ciudad">
 
 
         </div>
