--- a/inicio.html
+++ b/inicio.html
@@ -15,8 +15,8 @@
     <header>
         <div class="main-header">
             <a href="./inicio.html"><img class="logo" src="./img/logo1.png" alt="logo-bicicleta"></a>
-            <img class="logo-2" src="./img/logo2.png" alt="logo-BA-ciudad">
-
+            <img class="logo-2" src="/img/logo2.png" alt="logo-BA-ciudad">
+            
 
         </div>
 
@@ -75,8 +75,8 @@
                 perspectiva eco-friendly! ¡Te aseguramos que cada pedaleo será una experiencia inolvidable llena de
                 descubrimientos y emociones! ¡Anímate a usar Ecobici ya ser parte del movimiento hacia una ciudad más
                 limpia, verde y amigable con todos!</p>
-            <p> Dia a dia, año tras año mas personas elijen como medio de transporte.</p>
-            <img class="grafico_año" src="./Graficos/image 2.PNG" alt="imagen_año">
+                <p> Dia a dia, año tras año mas personas elijen como medio de transporte.</p>
+                <img class="grafico_año" src="./Graficos/image 2.PNG" alt="imagen_año">
             <p> ✔ ¡Descubre una forma sostenible y emocionante de moverte por Buenos Aires!
                 Te recomendamos experimentar la ciudad de una manera única y amigable con el medio ambiente a través de
                 EcoBici. Con nuestra red de bicicletas compartidas, podrás recorrer los encantadores barrios porteños,
