--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -108,19 +108,16 @@
 
             </div>
 
-
-
             <div class="alumnos">
 
-                <img class="img-perfil" src="../img/img-user.jpg" alt="Imagen alumno Paola Guerra">
+                <img class="img-perfil" src="../img/paolaguerra.JPEG" alt="Imagen alumno Paola Guerra">
 
                 <div class="contenedor-info-perfil">
                     <h3 class="titular">Paola Guerra</h3>
                     <div class="contenedor-button">
-                        <button class="button-linkedin"><a href="#" target="_blank">Linkedin</a></button>
+                        <button class="button-linkedin"><a href="https://www.linkedin.com/in/paola-guerra-366702247/" target="_blank">Linkedin</a></button>
                     </div>
-                    <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
-                        suscipit fugiat consequatur
+                    <p class="texto-perfil"> Hola! Soy una apasionada por la tecnologia desde muy chica, tanto de hardware y software. Soy full stack developer y sigo en pleno crecimiento. Me gusta tener nuevos desafios dia a dia e ir superandolos con mis conocimientos o nuevos conocimientos que vaya adquiriendo.
                     </p>
 
 
