--- a/pages/busqueda/indiex.html
+++ b/pages/busqueda/indiex.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/pages/busqueda/index.css">
+    <link rel="stylesheet" href="index.css">
     <title>Filtro de elementos</title>
 </head>
 <body>
