Corrijo detalles en vista busqueda

--- a/pages/busqueda/busqueda.html
+++ b/pages/busqueda/busqueda.html
@@ -9,6 +9,27 @@
     <title>Filtro de elementos</title>
 </head>
 <body>
+
+    <header>
+       
+
+        <nav class="nav-bar" id="navBar">
+
+            <ul>
+                <li><i class="fa-solid fa-bicycle"></i></li>
+                <li><a href=".../pages/inicio.html">Inicio</a></li>
+                <li><a href="../pages/nosotros.html">Nosotros</a></li>
+                <li> <a href="../pages/contacto.html">Contacto</a></li>
+                <li><i class="fa-solid fa-bicycle"></i></li>
+
+            </ul>
+        </nav>
+
+
+
+    </header>
+    <main>
+        
 <section id="contenedor-main">
 
     <div>
@@ -60,6 +81,8 @@
 
 
 </section>
+
+</main>
 <script src="script.js"></script>
 </body>
 </html>
