--- a/inicio.html
+++ b/inicio.html
@@ -58,7 +58,7 @@
 
             <h2 class="titular-h2">¡Buscá tu estación más cercana!</h2>
             <div class="center-button">
-                <a href="./pages/busqueda/indiex.html" >
+                <a href="./pages/busqueda/busqueda.html" >
                     <button class="button-estaciones ">Buscar estaciones🚲</button>
                 </a>
 
