Nuevo cambio en rutas

--- a/pages/busqueda/busqueda.html
+++ b/pages/busqueda/busqueda.html
@@ -17,9 +17,9 @@
 
             <ul>
                 <li><i class="fa-solid fa-bicycle"></i></li>
-                <li><a href=".../pages/inicio.html">Inicio</a></li>
-                <li><a href="../pages/nosotros.html">Nosotros</a></li>
-                <li> <a href="../pages/contacto.html">Contacto</a></li>
+                <li><a href="/../../inicio.html">Inicio</a></li>
+                <li><a href="/../pages/nosotros.html">Nosotros</a></li>
+                <li> <a href="/../pages/contacto.html">Contacto</a></li>
                 <li><i class="fa-solid fa-bicycle"></i></li>
 
             </ul>
