--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -73,8 +73,8 @@
                         <button class="button-linkedin"><a href="#" target="_blank">Linkedin</a></button>
                     </div>
 
-                    <p class="texto-perfil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quis
-                        suscipit fugiat consequatur
+                    <p class="texto-perfil">Hola. Soy Micaela, tengo 31 años y me egrese en el área de Desarrollo Web - Full Stack,
+                        también poseo conocimientos básicos en Diseño Gráfico. Me gustan los desafíos, ya que es donde uno puede exprimir su potencial.  
                     </p>
 
 
