--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -70,7 +70,7 @@
                 <div class="contenedor-info-perfil">
                     <h3 class="titular">Micaela Ocanto</h3>
                     <div class="contenedor-button">
-                        <button class="button-linkedin"><a href="#" target="_blank">Linkedin</a></button>
+                        <button class="button-linkedin"><a href= "http://www.linkedin.com/in/micaela-yanel-ocanto-566363141target="_blank">Linkedin</a></button>
                     </div>
 
                     <p class="texto-perfil">Hola. Soy Micaela, tengo 31 años y me egrese en el área de Desarrollo Web - Full Stack,
