--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -65,13 +65,13 @@
 
             <div class="alumnos">
 
-                <img class="img-perfil" src="../img/micaela_ocanto.jpeg" alt="Imagen alumna Micaela Ocanto">
+                <img class="img-perfil" src= "../imagenes/micaela_ocanto.jpeg" alt="Imagen alumna Micaela Ocanto">
 
                 <div class="contenedor-info-perfil">
                     <h3 class="titular">Micaela Ocanto</h3>
                     <div class="contenedor-button">
-                        <button class="button-linkedin"><a href="https://www.linkedin.com/in/micaela-yanel-ocanto-566363141/"
-                                target="_blank">Linkedin</a></button>
+                        <button class="button-linkedin"><a https://www.linkedin.com/in/micaela-yanel-ocanto-566363141/?trk=public-profile-join-page
+                            target="_blank">Linkedin</a></button>
                     </div>
 
                     <p class="texto-perfil">Hola. Soy Micaela, tengo 31 años y me egrese en el área de Desarrollo Web - Full Stack,
