--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -70,7 +70,7 @@
                 <div class="contenedor-info-perfil">
                     <h3 class="titular">Micaela Ocanto</h3>
                     <div class="contenedor-button">
-                        <button class="button-linkedin"><a href="https://www.linkedin.com/in/micaela-yanel-ocanto-566363141/?trk=public-profile-join-page
+                        <button class="button-linkedin"><a href="https://www.linkedin.com/in/micaela-yanel-ocanto-566363141/?trk=public-profile-join-page/"
                             target="_blank">Linkedin</a></button>
                     </div>
 
