--- a/inicio.html
+++ b/inicio.html
@@ -76,7 +76,7 @@
                 descubrimientos y emociones! ¡Anímate a usar Ecobici ya ser parte del movimiento hacia una ciudad más
                 limpia, verde y amigable con todos!</p>
                 <p> Dia a dia, año tras año mas personas elijen como medio de transporte.</p>
-                <img class="grafico_año" src="./Graficos/image 2.PNG" alt="imagen_año">
+                <img class="grafico-año" src="./Graficos/image 2.PNG" alt="imagen_año">
             <p> ✔ ¡Descubre una forma sostenible y emocionante de moverte por Buenos Aires!
                 Te recomendamos experimentar la ciudad de una manera única y amigable con el medio ambiente a través de
                 EcoBici. Con nuestra red de bicicletas compartidas, podrás recorrer los encantadores barrios porteños,
