--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -65,7 +65,7 @@
 
             <div class="alumnos">
 
-                <img class="img-perfil" src= "../imagen/micaela_ocanto.jpeg" alt="Imagen alumna Micaela Ocanto">
+                <img class="img-perfil" src= "../img/micaela_ocanto.jpeg" alt="Imagen alumna Micaela Ocanto">
 
                 <div class="contenedor-info-perfil">
                     <h3 class="titular">Micaela Ocanto</h3>
