centro menu de hamburguesa

--- a/inicio.html
+++ b/inicio.html
@@ -19,12 +19,12 @@
             
 
         </div>
-
-
-
-        <a href="#" class="burger-menu" id="burgerMenu">
-            <i class="fas fa-bars"></i>
-        </a>
+        <div class="burger-container">
+            <div class="burger-center"><a href="#" class="burger-menu" id="burgerMenu">
+                    <i class="fas fa-bars"></i>
+                </a>
+            </div>
+        </div>
 
 
         <nav class="nav-bar" id="navBar">
@@ -39,9 +39,9 @@
             </ul>
         </nav>
 
-
-
     </header>
+    
+
 
     <main>
 
@@ -58,7 +58,7 @@
 
             <h2 class="titular-h2">¡Buscá tu estación más cercana!</h2>
             <div class="center-button">
-                <a href="./pages/busqueda/busqueda.html" >
+                <a href="./pages/busqueda/busqueda.html">
                     <button class="button-estaciones ">Buscar estaciones🚲</button>
                 </a>
 
@@ -75,8 +75,8 @@
                 perspectiva eco-friendly! ¡Te aseguramos que cada pedaleo será una experiencia inolvidable llena de
                 descubrimientos y emociones! ¡Anímate a usar Ecobici ya ser parte del movimiento hacia una ciudad más
                 limpia, verde y amigable con todos!</p>
-                <p> Dia a dia, año tras año mas personas elijen como medio de transporte.</p>
-                <img class="grafico-año" src="./Graficos/image 2.PNG" alt="imagen_año">
+            <p> Dia a dia, año tras año mas personas elijen como medio de transporte.</p>
+            <img class="grafico-año" src="./Graficos/image 2.PNG" alt="imagen_año">
             <p> ✔ ¡Descubre una forma sostenible y emocionante de moverte por Buenos Aires!
                 Te recomendamos experimentar la ciudad de una manera única y amigable con el medio ambiente a través de
                 EcoBici. Con nuestra red de bicicletas compartidas, podrás recorrer los encantadores barrios porteños,
