--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,11 +20,14 @@
 
         </div>
 
-        <a href="#" class="burger-menu" id="burgerMenu">
-            <i class="fas fa-bars"></i>
-        </a>
-        
+        <div class="burger-container">
+            <div class="burger-center"><a href="#" class="burger-menu" id="burgerMenu">
+                    <i class="fas fa-bars"></i>
+                </a>
+            </div>
+        </div>
 
+    
         <nav class="nav-bar" id="navBar">
             <ul>
                 <li><i class="fa-solid fa-bicycle"></i></li>
