--- a/inicio.html
+++ b/inicio.html
@@ -34,6 +34,7 @@
                 <li><a href="./inicio.html">Inicio</a></li>
                 <li><a href="./pages/nosotros.html">Nosotros</a></li>
                 <li> <a href="./pages/contacto.html">Contacto</a></li>
+                <li> <a href="./pages/graficos.html">Conoce mas</a></li>
                 <li><i class="fa-solid fa-bicycle"></i></li>
 
             </ul>
