--- a/pages/graficos.html
+++ b/pages/graficos.html
@@ -43,7 +43,7 @@
 
             <h2 class="titular-h2">¿Porque usar EcoBici?</h2>
             
-            <div>
+            <div class="fadeIn">
                 <h3>Distancias más recorridas</h3>
                 <p>Las bicicletas de EcoBici son ideales para recorrer distancias cortas y medianas en la ciudad. Los
                     usuarios disfrutan de trayectos promedio de 3 kilómetros, lo que representa una opción rápida,
@@ -55,12 +55,16 @@
                 <p>Las estaciones más populares son Pacifico (Santa Fe y av. Bullrich), Constitucion (Juan de Garay 1050), y Congreso (Cevallos e Yrigoyen). Estas ubicaciones estratégicas ofrecen un fácil acceso a los puntos de interés, áreas de alta demanda en la ciudad y rapida combinacion con otros medios de transporte, lo que las convierte en opciones favoritas para los usuarios.</p>
                 <img class="grafico_año" src="../Graficos/image 9.PNG" alt="imagen_año">
             </div>
-            <div>
+            <div class="fadeIn">
                 <h3>Crecimiento y éxito de EcoBici</h3>
                 <p>Desde su lanzamiento, EcoBici ha sido un éxito rotundo, con más de 18 millones de recorridos realizados hasta la fecha y 861 mil usuarios activos. Gracias al apoyo y compromiso de nuestra comunidad de ciclistas, hemos contribuido significativamente a una movilidad más sostenible en Buenos Aires.</p>
                 <img class="grafico_año" src="../Graficos/image 7.PNG" alt="imagen_año">
             </div>
-
+            <div class="fadeIn">
+                <h3>Horarios de mayor uso</h3>
+                <p>Las Eco bicis son una elección popular tanto para los que se dirigen al trabajo durante las mañanas, como para aquellos que disfrutan de un paseo por la ciudad durante la tarde. Los horarios de mayor uso son de 16 a 19 y de 12 a 15, cuando nuestras estaciones experimentan una alta demanda de bicicletas.</p>
+                <img class="grafico_año" src="../Graficos/image.PNG" alt="imagen_año">
+            </div>
 
 
         </main>
@@ -79,7 +83,7 @@
         <p class="copy">Diseñado por Grupo #9 - &copy;2023</p>
 
     </footer>
-
+    <script src="../scripts/fadeIn.js"></script>
 </body>
 
 </html>
