--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -108,7 +108,7 @@
                             <a href="https://www.linkedin.com/in/licht-alzamora-72b119226?trk=contact-info"
                                 target="_blank">Linkedin</a></button>
                     </div>
-                    <p class="texto-perfil">Desarrollo Web - Full Stack - Soy una apasionada del desarrolladora web y
+                    <p class="texto-perfil">Desarrollo Web - Full Stack - Soy una apasionada del desarrollado web y
                         siempre estoy ansiosa por enfrentar nuevos desafíos y aprender cosas nuevas.
                     </p>
 
