--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -34,6 +34,7 @@
                 <li><a href="../inicio.html">Inicio</a></li>
                 <li><a href="./nosotros.html">Nosotros</a></li>
                 <li> <a href="./contacto.html">Contacto</a></li>
+                <li> <a href="./graficos.html">Conoce mas</a></li>
                 <li><i class="fa-solid fa-bicycle"></i></li>
             </ul>
         </nav>
@@ -90,6 +91,7 @@
             <li><a href="../inicio.html">Inicio</a></li>
             <li><a href="./nosotros.html">Nosotros</a></li>
             <li><a href="./Formulario/index.html">Contacto</a></li>
+            <li> <a href="./graficos.html">Conoce mas</a></li>
             <li><i class="fa-solid fa-bicycle"></i></li>
         </ul>
         <p class="copy">Diseñado por Grupo #9 - &copy;2023</p>
