--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -37,6 +37,7 @@
                 <li><a href="../inicio.html">Inicio</a></li>
                 <li><a href="./nosotros.html">Nosotros</a></li>
                 <li> <a href="./contacto.html">Contacto</a></li>
+                <li> <a href="./graficos.html">Conoce mas</a></li>
                 <li><i class="fa-solid fa-bicycle"></i></li>
             </ul>
         </nav>
@@ -160,6 +161,7 @@
             <li><a href="../inicio.html">Inicio</a></li>
             <li><a href="./nosotros.html">Nosotros</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
+            <li> <a href="./graficos.html">Conoce mas</a></li>
             <li><i class="fa-solid fa-bicycle"></i></li>
         </ul>
         <p class="copy">Diseñado por Grupo #9 - &copy;2023</p>
