--- a/inicio.html
+++ b/inicio.html
@@ -77,7 +77,7 @@
                 descubrimientos y emociones! ¡Anímate a usar Ecobici ya ser parte del movimiento hacia una ciudad más
                 limpia, verde y amigable con todos!</p>
             <p> Dia a dia, año tras año mas personas elijen como medio de transporte.</p>
-            <img class="grafico-año" src="./Graficos/image 2.PNG" alt="imagen_año">
+            <img class="grafico-año1" src="./Graficos/image 2.PNG" alt="imagen_año">
             <p> ✔ ¡Descubre una forma sostenible y emocionante de moverte por Buenos Aires!
                 Te recomendamos experimentar la ciudad de una manera única y amigable con el medio ambiente a través de
                 EcoBici. Con nuestra red de bicicletas compartidas, podrás recorrer los encantadores barrios porteños,
@@ -98,6 +98,7 @@
             <li><a href="./inicio.html">Inicio</a></li>
             <li><a href="./pages/nosotros.html">Nosotros</a></li>
             <li><a href="./pages/contacto.html">Contacto</a></li>
+            <li> <a href="./pages/graficos.html">Conoce mas</a></li>
             <li><i class="fa-solid fa-bicycle"></i></li>
         </ul>
         <p class="copy">Diseñado por Grupo #9 - &copy;2023</p>
