--- a/pages/graficos.html
+++ b/pages/graficos.html
@@ -102,7 +102,7 @@
             <li><i class="fa-solid fa-bicycle"></i></li>
             <li><a href="../inicio.html">Inicio</a></li>
             <li><a href="./nosotros.html">Nosotros</a></li>
-            li> <a href="./contacto.html">Contacto</a></li>
+            <li> <a href="./contacto.html">Contacto</a></li>
             <li> <a href="./graficos.html">Conoce mas</a></li>
             <li><i class="fa-solid fa-bicycle"></i></li>
         </ul>
