--- a/pages/busqueda/busqueda.html
+++ b/pages/busqueda/busqueda.html
@@ -14,7 +14,6 @@
 <body>
 
     <header>
-       
 
         <nav class="nav-bar" id="navBar">
 
@@ -28,60 +27,52 @@
             </ul>
         </nav>
 
-
-
     </header>
     <main>
         
 <section id="contenedor-main">
 
-    <div>
-        <input type="text" name="buscador" id="buscador" placeholder="Buscar...">
-
+    <div class="container_maps">
         <ul id="listaArticulos">
-            <li class="articulo">Agronomia</li>
-            <li class="articulo">Almagro</li>
-            <li class="articulo">Balvanera</li>
-            <li class="articulo">Barracas</li>
-            <li class="articulo">Belgrano</li>
-            <li class="articulo">Boedo</li>
-            <li class="articulo">Caballito</li>
-            <li class="articulo">Chacarita</li>
-            <li class="articulo">Coghlan</li>
-            <li class="articulo">Colegiales</li>
-            <li class="articulo">Constitución</li>
-            <li class="articulo">Flores</li>
-            <li class="articulo">Floresta</li>
-            <li class="articulo">La Boca</li>
-            <li class="articulo">La Paternal</li>
-            <li class="articulo">Liniers</li>
-            <li class="articulo">Mataderos</li>
-            <li class="articulo">Monte Castro</li>
-            <li class="articulo">Monserrat</li>
-            <li class="articulo">Nueva Pompeya</li>
-            <li class="articulo">Núñez</li>
-            <li class="articulo">Palermo</li>
-            <li class="articulo">Parque Avellaneda</li>
-            <li class="articulo">Parque Chacabuco</li>
-            <li class="articulo">Parque Chas</li>
-            <li class="articulo">Parque Patricios</li>
-            <li class="articulo">Recoleta</li>
-            <li class="articulo">Retiro</li>
-            <li class="articulo">Saavedra</li>
-            <li class="articulo">San Cristóbal</li>
-            <li class="articulo">San Nicolás</li>
-            <li class="articulo">San Telmo</li>
-            <li class="articulo">Villa Crespo</li>
-            <li class="articulo">Villa del Parque</li>
-            <li class="articulo">Villa Devoto</li>
-            <li class="articulo">Villa Urquiza</li>
+            <li class="articulo" data-barrio="Agronomia">Agronomia</li>
+            <li class="articulo" data-barrio="Almagro">Almagro</li>
+            <li class="articulo" data-barrio="Balvanera">Balvanera</li>
+            <li class="articulo" data-barrio="Barracas">Barracas</li>
+            <li class="articulo" data-barrio="Belgrano">Belgrano</li>
+            <li class="articulo" data-barrio="Boedo">Boedo</li>
+            <li class="articulo" data-barrio="Caballito">Caballito</li>
+            <li class="articulo" data-barrio="Chacarita">Chacarita</li>
+            <li class="articulo" data-barrio="Coghlan">Coghlan</li>
+            <li class="articulo" data-barrio="Colegiales">Colegiales</li>
+            <li class="articulo" data-barrio="Constitución">Constitución</li>
+            <li class="articulo" data-barrio="Flores">Flores</li>
+            <li class="articulo" data-barrio="Floresta">Floresta</li>
+            <li class="articulo" data-barrio="La_Boca">La Boca</li>
+            <li class="articulo" data-barrio="La_Paternal">La Paternal</li>
+            <li class="articulo" data-barrio="Liniers">Liniers</li>
+            <li class="articulo" data-barrio="Mataderos">Mataderos</li>
+            <li class="articulo" data-barrio="Monte_Castro">Monte Castro</li>
+            <li class="articulo" data-barrio="Monserrat">Monserrat</li>
+            <li class="articulo" data-barrio="Nueva_Pompeya">Nueva Pompeya</li>
+            <li class="articulo" data-barrio="Nuñez">Núñez</li>
+            <li class="articulo" data-barrio="Palermo">Palermo</li>
+            <li class="articulo" data-barrio="Parque_Avellaneda">Parque Avellaneda</li>
+            <li class="articulo" data-barrio="Parque_Chacabuco">Parque Chacabuco</li>
+            <li class="articulo" data-barrio="Parque_Chas">Parque Chas</li>
+            <li class="articulo" data-barrio="Parque_Patricios">Parque Patricios</li>
+            <li class="articulo" data-barrio="Recoleta">Recoleta</li>
+            <li class="articulo" data-barrio="Retiro">Retiro</li>
+            <li class="articulo" data-barrio="Saavedra">Saavedra</li>
+            <li class="articulo" data-barrio="San_Cristóbal">San Cristóbal</li>
+            <li class="articulo" data-barrio="San_Nicolás">San Nicolás</li>
+            <li class="articulo" data-barrio="San_Telmo">San Telmo</li>
+            <li class="articulo" data-barrio="Villa_Crespo">Villa Crespo</li>
+            <li class="articulo" data-barrio="Villa_del_Parque">Villa del Parque</li>
+            <li class="articulo" data-barrio="Villa_Devoto">Villa Devoto</li>
+            <li class="articulo" data-barrio="Villa_Urquiza">Villa Urquiza</li>
         </ul>
-
+        <div id="infoArticulo"></div>
     </div>
-
-    <div id="infoArticulo">
-    </div>
-
 
 </section>
 
