--- a/inicio.html
+++ b/inicio.html
@@ -85,9 +85,10 @@
                 tráfico y los problemas de estacionamiento, ¡con EcoBici es fácil y conveniente llegar a cualquier
                 destino! una experiencia inolvidable en la vibrante ciudad de Buenos Aires.
                 ¡Las calles te esperan, súbete a una EcoBici y comienza a pedalear hacia un futuro más verde y
-                saludable!"</p>
+                saludable!"
+            </p>
         </div>
-
+       
     </main>
 
     <footer>
