--- a/pages/busqueda/busqueda.html
+++ b/pages/busqueda/busqueda.html
@@ -33,44 +33,44 @@
 <section id="contenedor-main">
 
     <div class="container_maps">
-        <ul id="listaArticulos">
-            <li class="articulo" data-barrio="Agronomia">Agronomia</li>
-            <li class="articulo" data-barrio="Almagro">Almagro</li>
-            <li class="articulo" data-barrio="Balvanera">Balvanera</li>
-            <li class="articulo" data-barrio="Barracas">Barracas</li>
-            <li class="articulo" data-barrio="Belgrano">Belgrano</li>
-            <li class="articulo" data-barrio="Boedo">Boedo</li>
-            <li class="articulo" data-barrio="Caballito">Caballito</li>
-            <li class="articulo" data-barrio="Chacarita">Chacarita</li>
-            <li class="articulo" data-barrio="Coghlan">Coghlan</li>
-            <li class="articulo" data-barrio="Colegiales">Colegiales</li>
-            <li class="articulo" data-barrio="Constitución">Constitución</li>
-            <li class="articulo" data-barrio="Flores">Flores</li>
-            <li class="articulo" data-barrio="Floresta">Floresta</li>
-            <li class="articulo" data-barrio="La_Boca">La Boca</li>
-            <li class="articulo" data-barrio="La_Paternal">La Paternal</li>
-            <li class="articulo" data-barrio="Liniers">Liniers</li>
-            <li class="articulo" data-barrio="Mataderos">Mataderos</li>
-            <li class="articulo" data-barrio="Monte_Castro">Monte Castro</li>
-            <li class="articulo" data-barrio="Monserrat">Monserrat</li>
-            <li class="articulo" data-barrio="Nueva_Pompeya">Nueva Pompeya</li>
-            <li class="articulo" data-barrio="Nuñez">Núñez</li>
-            <li class="articulo" data-barrio="Palermo">Palermo</li>
-            <li class="articulo" data-barrio="Parque_Avellaneda">Parque Avellaneda</li>
-            <li class="articulo" data-barrio="Parque_Chacabuco">Parque Chacabuco</li>
-            <li class="articulo" data-barrio="Parque_Chas">Parque Chas</li>
-            <li class="articulo" data-barrio="Parque_Patricios">Parque Patricios</li>
-            <li class="articulo" data-barrio="Recoleta">Recoleta</li>
-            <li class="articulo" data-barrio="Retiro">Retiro</li>
-            <li class="articulo" data-barrio="Saavedra">Saavedra</li>
-            <li class="articulo" data-barrio="San_Cristóbal">San Cristóbal</li>
-            <li class="articulo" data-barrio="San_Nicolás">San Nicolás</li>
-            <li class="articulo" data-barrio="San_Telmo">San Telmo</li>
-            <li class="articulo" data-barrio="Villa_Crespo">Villa Crespo</li>
-            <li class="articulo" data-barrio="Villa_del_Parque">Villa del Parque</li>
-            <li class="articulo" data-barrio="Villa_Devoto">Villa Devoto</li>
-            <li class="articulo" data-barrio="Villa_Urquiza">Villa Urquiza</li>
-        </ul>
+        <select id="selectBarrios">
+            <option value="Agronomia">Agronomia</li>
+            <option value="Almagro">Almagro</li>
+            <option value="Balvanera">Balvanera</li>
+            <option value="Barracas">Barracas</li>
+            <option value="belgrano">Belgrano</option>
+            <option value="Boedo">Boedo</li>
+            <option value="Caballito">Caballito</li>
+            <option value="Chacarita">Chacarita</li>
+            <option value="Coghlan">Coghlan</li>
+            <option value="Colegiales">Colegiales</li>
+            <option value="Constitucion">Constitución</li>
+            <option value="Flores">Flores</li>
+            <option value="Floresta">Floresta</li>
+            <option value="La_Boca">La Boca</li>
+            <option value="La_Paternal">La Paternal</li>
+            <option value="Liniers">Liniers</li>
+            <option value="Mataderos">Mataderos</li>
+            <option value="Monte_Castro">Monte Castro</li>
+            <option value="Monserrat">Monserrat</li>
+            <option value="Nueva_Pompeya">Nueva Pompeya</li>
+            <option value="Nuñez">Núñez</li>
+            <option value="Palermo">Palermo</li>
+            <option value="Parque_Avellaneda">Parque Avellaneda</li>
+            <loption value="Parque_Chacabuco">Parque Chacabuco</li>
+            <option value="Parque_Chas">Parque Chas</li>
+            <option value="Parque_Patricios">Parque Patricios</li>
+            <option value="Recoleta">Recoleta</li>
+            <option value="Retiro">Retiro</li>
+            <option value="Saavedra">Saavedra</li>
+            <option value="San_Cristóbal">San Cristóbal</li>
+            <option value="San_Nicolás">San Nicolás</li>
+            <option value="San_Telmo">San Telmo</li>
+            <option value="Villa_Crespo">Villa Crespo</li>
+            <option value=option value="Villa_del_Parque">Villa del Parque</li>
+            <option value="Villa_Devoto">Villa Devoto</li>
+            <option value="Villa_Urquiza">Villa Urquiza</li>
+        </select>
         <div id="infoArticulo"></div>
     </div>
 
